; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/windowscodecs/extr_info.c_ComponentInfo_GetGUIDValue.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/windowscodecs/extr_info.c_ComponentInfo_GetGUIDValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@E_INVALIDARG = common dso_local global i32 0, align 4
@RRF_RT_REG_SZ = common dso_local global i32 0, align 4
@RRF_NOEXPAND = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [23 x i8] c"incomplete GUID value\0A\00", align 1
@E_FAIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32*)* @ComponentInfo_GetGUIDValue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ComponentInfo_GetGUIDValue(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca [39 x i32], align 16
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 156, i32* %10, align 4
  %12 = load i32*, i32** %7, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %16, label %14

14:                                               ; preds = %3
  %15 = load i32, i32* @E_INVALIDARG, align 4
  store i32 %15, i32* %4, align 4
  br label %42

16:                                               ; preds = %3
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* @RRF_RT_REG_SZ, align 4
  %20 = load i32, i32* @RRF_NOEXPAND, align 4
  %21 = or i32 %19, %20
  %22 = getelementptr inbounds [39 x i32], [39 x i32]* %9, i64 0, i64 0
  %23 = call i64 @RegGetValueW(i32 %17, i32* null, i32 %18, i32 %21, i32* null, i32* %22, i32* %10)
  store i64 %23, i64* %8, align 8
  %24 = load i64, i64* %8, align 8
  %25 = load i64, i64* @ERROR_SUCCESS, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %30

27:                                               ; preds = %16
  %28 = load i64, i64* %8, align 8
  %29 = call i32 @HRESULT_FROM_WIN32(i64 %28)
  store i32 %29, i32* %4, align 4
  br label %42

30:                                               ; preds = %16
  %31 = load i32, i32* %10, align 4
  %32 = sext i32 %31 to i64
  %33 = icmp ult i64 %32, 156
  br i1 %33, label %34, label %37

34:                                               ; preds = %30
  %35 = call i32 @ERR(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %36 = load i32, i32* @E_FAIL, align 4
  store i32 %36, i32* %4, align 4
  br label %42

37:                                               ; preds = %30
  %38 = getelementptr inbounds [39 x i32], [39 x i32]* %9, i64 0, i64 0
  %39 = load i32*, i32** %7, align 8
  %40 = call i32 @CLSIDFromString(i32* %38, i32* %39)
  store i32 %40, i32* %11, align 4
  %41 = load i32, i32* %11, align 4
  store i32 %41, i32* %4, align 4
  br label %42

42:                                               ; preds = %37, %34, %27, %14
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local i64 @RegGetValueW(i32, i32*, i32, i32, i32*, i32*, i32*) #1

declare dso_local i32 @HRESULT_FROM_WIN32(i64) #1

declare dso_local i32 @ERR(i8*) #1

declare dso_local i32 @CLSIDFromString(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
